# strategicMiscalibration

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  pyproject.toml
.warp/: context.md  rules.md
src/strategicuncertainty/: __init__.py  analysis.py  datatypes.py  llm_interface.py  singleModel.py  single_player.py  two_player.py  utils.py
src/strategicuncertainty/prompt_templates/: baseline_agent_prompt.j2  baseline_prompt.j2  decision_user_prompt.j2  game_agent_prompt.j2  game_prompt.j2  posterior_user_prompt.j2  user_prompt.j2
tests/: test_llm_interface.py  test_regressions.py  test_sanitizers.py
