[project]
name = "strategicuncertainty"
version = "0.1.0"
description = ""
authors = [
    {name = "raarghal",email = "rarghal@seas.upenn.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataclasses>=0.8",
    "datasets>=4.4.1",
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "tenacity>=9.1.2",
    "together>=1.5.33",
    "tqdm>=4.67.1",
]

[tool.poetry]
packages = [{include = "strategicuncertainty", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
